<resources>
    <string name="app_name">The Maddest Of Libs</string>
    <string name="header">Hey Kid, you wanna do some mad libs?</string>
    <string name="person">Person</string>
    <string name="location">Location</string>
    <string name="nown">Noun</string>
    <string name="animal">Animal</string>
    <string name="vehicle">Vehicle</string>
    <string name="feeling">Feeling</string>
    <string name="swears">Angry Outburst</string>
    <string name="letsrock">Generate!</string>
</resources>